# holistic

./: .gitignore  README.md  config.yaml  data0.yaml  fscan.py  fscan.yaml  graphics.py  holistic.py  params.py  params.yaml  pose.py  pose.yaml  scan.py  scan.yaml  test0.yaml
generator/: Cargo.toml
generator/src/: context3d_xcb_glx_opengl45.rs  face.rs  image.rs  main.rs  pixel.rs
generator/src/image_formats/: bmp.rs  gif.rs  jpeg.rs  mod.rs  pbm.rs  png.rs  tga.rs  tiff.rs  webp.rs  xbm.rs
generator/src/math/: color.rs  complex.rs  euler.rs  matrix.rs  mod.rs  multivector.rs  quaternion.rs  rectangle.rs  vector.rs
generator/src/opengl45/: framebuffer.rs  mod.rs  shader.rs  texture2d.rs  vertexbuffer.rs
models/fscan/: fscan.yaml  generate.py  modeldef.py  test.py  train.py
models/pose/: modeldef.py  pose.yaml  test.py  train.py
